--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="container">
         <h2>Student Registration Form</h2>
-        <form action="https://docs.google.com/forms/d/e/YOUR_FORM_ID/formResponse" method="POST">
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSfiheLl9fmc7uWioH5orklRuy3IcnDPtogDN0fVqJCUgGJrYA/formResponse" method="POST">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="entry.YOUR_NAME_ENTRY_ID" required>
+            <input type="text" id="name" name="entry.756189470" required>
 
             <label for="roll">Roll No:</label>
-            <input type="text" id="roll" name="entry.YOUR_ROLL_ENTRY_ID" required>
+            <input type="text" id="roll" name="entry.2046854061" required>
 
             <label for="class">Class:</label>
-            <input type="text" id="class" name="entry.YOUR_CLASS_ENTRY_ID" required>
+            <input type="text" id="class" name="entry.1041490552" required>
 
             <button type="submit">Submit</button>
         </form>
